agregado loading a login

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         </form>		
 	</div>
 </div>
+<div id="loading" style="display:none"><img src="jquery-mobile/images/ajax-loader.gif"></div>
 </body>
 </html>
