--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         
             <input type="button" value="Login" id="botonLogin">
         
-        </form>		
+        </form><div id="loading" style="display:none"><img src="jquery-mobile/images/ajax-loader.gif"></div>
 	</div>
 </div>
-<div id="loading" style="display:none"><img src="jquery-mobile/images/ajax-loader.gif"></div>
 </body>
 </html>
