--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script type="text/javascript" src="jquery-mobile/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="jquery-mobile/jquery.mobile-1.3.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+		isUserLogged();
+	</script>
     <style>
         /*this block should go in the styles.css file*/
         .ui-panel-inner {
