--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="jquery-mobile/jquery.mobile-1.3.1.min.css" />
     <script type="text/javascript" src="jquery-mobile/jquery-1.10.2.js"></script>
     <script type="text/javascript" src="jquery-mobile/jquery.mobile-1.3.1.min.js"></script>
-    
+    <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
 </head>
 
