--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-<div data-role="page" id="login" data-theme="b">
+<div data-role="page" id="login" data-theme="b" class="login">
  
 	<div data-role="header" data-theme="b">
 		<h1>Autenticacion de Usuario</h1>
@@ -48,6 +48,7 @@
         <div id="loading" style="position:absolute; width:100%; display:none" align="center"><img src="jquery-mobile/images/ajax-loader.gif"></div>
 	</div>
 </div>
+
 <div data-role="page" id="home" data-theme="b">
     <div data-role="panel" id="navpanel" data-theme="a"
          data-display="overlay" data-position="left">
