--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-<div data-role="page" id="login" data-theme="b" class="login">
+<div data-role="page" id="login" data-theme="b">
  
 	<div data-role="header" data-theme="b">
 		<h1>Autenticacion de Usuario</h1>
