Agregado formulario usuario datos personales

--- a/main.html
+++ b/main.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="jquery-mobile/jquery.mobile-1.3.1.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/menuActions.js"></script>
+    <link rel="stylesheet" href="jquery-mobile/jqm-inlinetabs.min.css" />
+	<script type="text/javascript" src="jquery-mobile/jqm-inlinetabs.min.js"></script>
 
     <style>
         /*this block should go in the styles.css file*/
